--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                 <div class="celebration-title">🥂 BESTIE VALENTINE 💜🥂</div>
                 
                 <!-- Replace with Beatrice's photo -->
-                <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+                <img src="photo/WhatsApp Image 2026-02-09 at 12.18.22 AM.jpeg" 
                      alt="Bestie Celebration" 
                      class="photo-frame">
                 
